tests/fixtures/positive/hardcoded-secret/config.py
STRIPE_API_KEY = "sk_live_example_realistic_value_for_fixture_123456"


def get_payment_key():
    return STRIPE_API_KEY
